--- a/index.html
+++ b/index.html
@@ -17,85 +17,47 @@
             <h1 class="bold header text-center"> Bookshelf App</h1>
             <div class="add-book">
                 <p class="header text-center">Add Book</p>
-                <form id="addbuku">
+                <form id="addbook">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="bookname" name="name" class="b-rad-rounded">
+                        <input type="text" required id="bookname" name="name" class="b-rad-rounded">
                     </div>
                     <div class="form-group">
                         <label for="writer">Penulis</label>
-                        <input type="text" id="writer" name="write" class="b-rad-rounded">
+                        <input type="text" required id="writer" name="write" class="b-rad-rounded">
                     </div>
                     <div class="form-group">
                         <label for="years">Tahun</label>
-                        <input type="number" id="years" name="years" class="b-rad-rounded">
+                        <input type="number" required id="years" name="years" class="b-rad-rounded">
                     </div>
                     <div>
                         <label for="done-read">Selesai Dibaca</label>
-                        <input type="checkbox" id="doneread" name="done-read">
+                        <input type="checkbox" id="readcheck" name="done-read">
                     </div>
-                    <input class="secondary-color text-white bold submit b-rad-rounded item-center" type="submit" value="Submit">
+                    <input class="secondary-color text-white bold submit b-rad-rounded item-center" type="submit"
+                        value="Submit">
                 </form>
             </div>
         </aside>
         <div class="content ">
             <p class="header">Search Book</p>
-            <form action="POST" class="search-form">
-                <input type="text" class="search-input b-rad-rounded" name="search">
+            <form class="search-form" id="searchform">
+                <input type="text" class="search-input b-rad-rounded" id="booksearch" name="search">
                 <input type="submit" class=" primary-color text-white bold submit b-rad-rounded" value="Search">
             </form>
             <p class="header mt-md">Belum Selesai Dibaca</p>
-            <div class="container mt-sm" id="contentNotReaded">
-                <div class="box primary-color b-rad-rounded-md text-white text-center">
-                    <p class=" bold mt-sm">Dilan 1990</p>
-                    <span class="iconify book-icon item-center mt-sm" data-icon="bi:book" data-inline="false"></span> 
-                    <p class="mt-sm ">Pidi Baiq</p>
-                    <p class=" bold">2015</p>  
-                    <button class="secondary-color text-white submit bold b-rad-rounded item-center">Selesai Dibaca</button>         
-                </div>
-                <div class="box primary-color b-rad-rounded-md text-white">
-                    <p class="text-center bold mt-sm">Dilan 1990</p>
-                    <span class="iconify book-icon item-center mt-sm" data-icon="bi:book" data-inline="false"></span> 
-                    <p class="mt-sm text-center">Pidi Baiq</p>
-                    <p class="text-center bold">2015</p>  
-                    <button class="secondary-color text-white submit bold b-rad-rounded item-center">Selesai Dibaca</button>         
-                </div>
-                <div class="box primary-color b-rad-rounded-md text-white">
-                    <p class="text-center bold mt-sm">Dilan 1990</p>
-                    <span class="iconify book-icon item-center mt-sm" data-icon="bi:book" data-inline="false"></span> 
-                    <p class="mt-sm text-center">Pidi Baiq</p>
-                    <p class="text-center bold">2015</p>  
-                    <button class="secondary-color text-white submit bold b-rad-rounded item-center">Selesai Dibaca</button>         
-                </div>
+            <div class="container mt-sm" id="notread">
 
             </div>
             <p class="header mt-md">Selesai Dibaca</p>
-            <div class="container mt-sm">
-                <div class="box secondary-color b-rad-rounded-md text-white">
-                    <p class="text-center bold mt-sm">Dilan 1990</p>
-                    <span class="iconify book-icon item-center mt-sm" data-icon="bi:book" data-inline="false"></span> 
-                    <p class="mt-sm text-center">Pidi Baiq</p>
-                    <p class="text-center bold">2015</p>  
-                    <button class="primary-color text-white submit bold b-rad-rounded item-center">Selesai Dibaca</button>         
-                </div>
-                <div class="box secondary-color b-rad-rounded-md text-white">
-                    <p class="text-center bold mt-sm">Dilan 1990</p>
-                    <span class="iconify book-icon item-center mt-sm" data-icon="bi:book" data-inline="false"></span> 
-                    <p class="mt-sm text-center">Pidi Baiq</p>
-                    <p class="text-center bold">2015</p>  
-                    <button class="primary-color text-white submit bold b-rad-rounded item-center">Selesai Dibaca</button>         
-                </div>
-                <div class="box secondary-color b-rad-rounded-md text-white">
-                    <p class="text-center bold mt-sm">Dilan 1990</p>
-                    <span class="iconify book-icon item-center mt-sm" data-icon="bi:book" data-inline="false"></span> 
-                    <p class="mt-sm text-center">Pidi Baiq</p>
-                    <p class="text-center bold">2015</p>  
-                    <button class="primary-color text-white submit bold b-rad-rounded item-center">Selesai Dibaca</button>         
-                </div>
+            <div class="container mt-sm" id="readed">
+
             </div>
         </div>
     </main>
-    <script src="main.js"></script>
+    <script src="js/data.js" type="text/javascript"></script>
+    <script src="js/dom.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 </body>
 
 </html>
